[project]
name = "open-instruct"
version = "0.1.0"
description = "Train open, instruction-following language models"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.10.1",
    "antlr4-python3-runtime==4.11",
    "backoff>=2.2.1",
    "bitsandbytes>=0.44.1; platform_system != 'Darwin'",
    "datasets>=4.0.0",
    "debugpy>=1.8.13",
    "deepspeed>=0.18.3",
    "hf-transfer>=0.1.8",
    "litellm>=1.72.0,<1.75.2",  # avoid needing backoff https://github.com/BerriAI/litellm/issues/13827
    "matplotlib>=3.9.3",
    "multiprocess<0.70.18",  # avoid AttributeError in ResourceTracker.__del__
    "nltk>=3.9.1",
    "numpy<2",
    "ai2-olmo-core==2.3.0",
    "nvitop>=1.4.2",
    "packaging>=24.2",
    "peft>=0.13.2",
    "ray[default]>=2.49.2",
    "setuptools>=75.6.0,<80.0.0",
    "tensorboard>=2.18.0",
    "torch>=2.8.0,<2.9",
    "transformers>=4.57.0",
    "vllm==0.11.0",
    "wandb==0.18.1",
    "langdetect==1.0.9",
    "immutabledict==1.2.0",
    "flash-attn>=2.8.3; platform_system != 'Darwin'",
    "liger-kernel>=0.5.4; platform_system != 'Darwin'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["open_instruct"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

# pytorch related setups
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
code = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[tool.uv]
preview = true
python-preference = "only-managed"
link-mode = "hardlink"

[dependency-groups]
dev = [
    "beaker-py>=2.5.3",
    "mkdocs-material>=9.6.8",
    "pytest>=8.3.4",
    "ruff>=0.11.13",
    "ty>=0.0.1a13",
    "parameterized>=0.9.0",
    "rich>=13.7.0",
    "responses>=0.25.8",
    "pre-commit>=4.5.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=oe-eval-internal/"


[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
known_first_party = ["open_instruct"]
profile = "black"
src_paths = ["open_instruct"]

[tool.ruff]
target-version = "py310"
line-length = 119
# do both . and open_instruct to make sure known-first-party below works
src = [".", "open_instruct"]
exclude = ["wandb"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Preserve original parentheses style to minimize changes
skip-magic-trailing-comma = true
# Enable black-compatible string normalization
docstring-code-format = false

[tool.ruff.lint]
# Enable rules equivalent to previous autoflake and flake8 configs:
# F = Pyflakes (covers autoflake functionality)
# E = pycodestyle errors (flake8)
# W = pycodestyle warnings (flake8)
# I = isort
# SIM = flake8-simplify
# UP = pyupgrade
# B = flake8-bugbear
select = ["F", "E", "W", "I", "SIM", "UP", "B"]
ignore = [
    "B905", # zip() without explicit strict= parameter
    "C408", # dict() calls (stylistic)
    "C901", # function complexity
    "E501", # Line too long (handled by line-length setting)
]

[tool.ruff.lint.isort]
known-first-party = ["open-instruct"]
# case insensitive to match isort --profile black
case-sensitive = false
# Disable split-on-trailing-comma to work with skip-magic-trailing-comma
split-on-trailing-comma = false

[tool.ty.src]
include = [
    "open_instruct/actor_manager.py",
    "open_instruct/benchmark_generators.py",
    "open_instruct/code_utils/api.py",
    "open_instruct/context_window_checker.py",
    "open_instruct/dataset_processor.py",
    "open_instruct/data_loader.py",
    "open_instruct/data_types.py",
    "open_instruct/logger_utils.py",
    "open_instruct/mix_data.py",
    "open_instruct/mix_data_preferences.py",
    "open_instruct/padding_free_collator.py",
    "open_instruct/rejection_sampling/prompt_templates.py",
    "open_instruct/search_utils/",
    "open_instruct/tool_utils/tools.py",
    "open_instruct/rl_utils.py",
]
exclude = ["scripts/", "decontamination/", "human_eval/"]
